[package]
name = "kvs"
version = "0.1.0"
authors = ["Max Kindritskiy <kindritskiy.m@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
failure = "0.1.8"
serde = "1.0.124"
serde_json = "1.0.64"
log = "0.4.17"
env_logger = "0.9.0"
sled = "0.34.7"
rayon = "1.5.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false